<resources>
    <string name="app_name" translatable="false">Space runner</string>
    <string name="jump_power">Power of jump</string>
    <string name="boost_power">Power of wing</string>
    <string name="energy">Energy</string>
    <string name="updating">Improvement</string>
    <string name="progress">in progress.</string>
    <string name="sec">&#160;sec</string>
    <string name="left">left</string>
    <string name="available">available.</string>
    <string name="take">It will take</string>
    <string name="not_available">will open after</string>
    <string name="record">the record</string>
    <string name="santimeter">&#160;sm</string>
    <string name="meter">&#160;m</string>
    <string name="kilometer">&#160;km</string>
    <string name="concentration">Concentration</string>
    <string name="start">Start with</string>
    <string name="skip">Acselerate on </string>
    <string name="small_skip">0.1 sec </string>
    <string name="big_skip">60 sec</string>
    <string name="rew_allert">(for viewing</string>
    <string name="rew_allert2">ads)</string>
    <string name="toggle_down_0">Skip fall animation. (Now showing)</string>
    <string name="toggle_down_1">Skip fall animation. (Skipped now)</string>
    <string name="new_game">Start new game</string>
    <string name="shure">Are you sure?</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="ret">Cancel</string>
    <string name="okay">OK</string>
    <string name="ask_hello">Welcome to Penguin flight!\n Want to get trained?</string>
    <string name="ask_next">Continue</string>
    <string name="ask_stop">Interrupt</string>
    <string name="ask_brok">Start training again</string>
    <string name="ask_exit">Training is disabled. You can always enable it in the settings menu.</string>
    <string name="ask_0">Now in front of you is the main window of the game. Here your penguin will try to fly higher and higher.</string>
    <string name="ask_1">When you press this button, your penguin will start preparing for flight. At the very beginning, your penguin is not yet able to fly, so when the preparation time for the flight expires, he will only jump up. </string>
    <string name="ask_2">Keep pressing the takeoff button to increase the concentration of the penguin. The higher the concentration at the time of takeoff, the higher the penguin will jump. The concentration level is displayed as a yellow bar under the penguin.</string>
    <string name="ask_3">When a penguin is in the air, the altitude it has reached is displayed above its head.</string>
    <string name="ask_4">When the penguin is back on the ground, the height record will be updated and displayed on the scoreboard Max:__.</string>
    <string name="ask_5">To fly even higher you need to improve your penguin. To go to the upgrade menu, click on this button.</string>
    <string name="ask_6">The upgrade menu contains all the ways to make your penguin stronger.</string>
    <string name="ask_7">By training, your penguin can improve his performance. At the beginning, you can only increase the power of the jump.</string>
    <string name="ask_8">To open any training, you need to set a height record. Start any training to continue learning. If there are no workouts available, return to the main window and reach the required record, try to keep your concentration at the highest possible level.</string>
    <string name="ask_9">When the penguin is training, the remaining time is displayed instead of concentration.</string>
    <string name="ask_10">During training, you can cheer the penguin by pressing this button. Each press will reduce the workout time by the set amount.</string>
    <string name="ask_11"></string>
    <string name="strong_training">Силовые тренировки</string>
    <string name="level">уровень</string>

</resources>