<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#8D94EBF6"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/shure_layout_0"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableLayout
            android:id="@+id/shure_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.25">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <TextView
                    android:id="@+id/tv_shure_0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/new_game"
                    android:textAlignment="center"
                    android:textSize="20sp" />

            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/shure"
                    android:textAlignment="center"
                    android:textSize="16sp" />

            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:gravity="center">

                        <FrameLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center">

                            <TextView
                                android:id="@+id/Yes_txt"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:text="@string/Yes"
                                android:textAlignment="center" />

                            <ImageButton
                                android:id="@+id/yes"
                                android:layout_width="83dp"
                                android:layout_height="28dp"
                                android:layout_gravity="center"
                                android:background="#00FFFFFF"
                                android:scaleType="fitXY"
                                android:textAlignment="center"
                                app:srcCompat="@drawable/imb" />
                        </FrameLayout>

                        <FrameLayout
                            android:layout_width="30dp"
                            android:layout_height="match_parent">

                        </FrameLayout>

                        <FrameLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_gravity="center">

                            <TextView
                                android:id="@+id/No_txt"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:text="@string/No"
                                android:textAlignment="center" />

                            <ImageButton
                                android:id="@+id/no"
                                android:layout_width="83dp"
                                android:layout_height="28dp"
                                android:layout_gravity="center"
                                android:background="#00FFFFFF"
                                android:scaleType="fitXY"
                                android:textAlignment="center"
                                app:srcCompat="@drawable/imb" />
                        </FrameLayout>

                    </TableRow>

                </TableLayout>

            </TableRow>

        </TableLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settings_layout_0"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageButton
                    android:id="@+id/Back"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="#00FFFFFF"
                    android:scaleType="fitStart"
                    app:srcCompat="@drawable/back_b" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center">

                <FrameLayout
                    android:id="@+id/fr_scip_fall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center">

                    <TextView
                        android:id="@+id/skip_fall_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/toggle_down_0"
                        android:textAlignment="center"
                        android:textSize="20sp" />

                    <ImageButton
                        android:id="@+id/skip_fall"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:background="#00FFFFFF"
                        android:scaleType="fitXY"
                        android:textAlignment="center"
                        app:srcCompat="@drawable/imb" />
                </FrameLayout>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="30dp"
                    android:layout_height="15dp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <FrameLayout
                    android:id="@+id/fr_ask_brok"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/ask_brok_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/ask_brok"
                        android:textAlignment="center"
                        android:textSize="20sp" />

                    <ImageButton
                        android:id="@+id/ib_ask_brok"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:background="#00FFFFFF"
                        android:scaleType="fitXY"
                        android:textAlignment="center"
                        app:srcCompat="@drawable/imb" />
                </FrameLayout>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="30dp"
                    android:layout_height="15dp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <FrameLayout
                    android:id="@+id/fr_new_game"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/new_game_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/new_game"
                        android:textAlignment="center"
                        android:textSize="20sp" />

                    <ImageButton
                        android:id="@+id/new_game"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:background="#00FFFFFF"
                        android:scaleType="fitXY"
                        android:textAlignment="center"
                        app:srcCompat="@drawable/imb" />
                </FrameLayout>
            </TableRow>
        </TableLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>